[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/World/BaseLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Enemies/BossEnemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/World/Door.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/DoorConnections/01_link_02.tres" type="Resource" id=4]
[ext_resource path="res://src/World/Level02.gd" type="Script" id=5]
[ext_resource path="res://src/World/Trigger.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/World/TileMap.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Enemies/Spikes.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 23 )

[node name="Level02" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="TileMap" parent="." index="0"]
tile_data = PoolIntArray( -196595, 0, 0, -196594, 0, 2, -131069, 0, 0, -131068, 0, 1, -131067, 0, 1, -131066, 0, 1, -131065, 0, 2, -131059, 0, 65536, -131058, 0, 131077, -131057, 0, 1, -131056, 0, 1, -131055, 0, 1, -131054, 0, 1, -131053, 0, 1, -131052, 0, 2, -2, 0, 0, -1, 0, 1, -65536, 0, 1, -65535, 0, 1, -65534, 0, 1, -65533, 0, 131078, -65532, 0, 65537, -65531, 0, 65537, -65530, 0, 65537, -65529, 0, 131077, -65528, 0, 1, -65527, 0, 1, -65526, 0, 1, -65525, 0, 1, -65524, 0, 1, -65523, 0, 131078, -65522, 0, 65537, -65521, 0, 65537, -65520, 0, 65537, -65519, 0, 65537, -65518, 0, 65537, -65517, 0, 65537, -65516, 0, 131077, -65515, 0, 1, -65514, 0, 2, 65534, 0, 65536, 65535, 0, 65537, 0, 0, 65537, 1, 0, 65537, 2, 0, 65541, 3, 0, 131073, 4, 0, 131073, 5, 0, 131073, 6, 0, 131073, 7, 0, 131073, 8, 0, 131073, 9, 0, 131073, 10, 0, 131073, 11, 0, 131073, 12, 0, 131073, 13, 0, 131073, 14, 0, 131073, 15, 0, 65542, 16, 0, 65537, 17, 0, 65537, 18, 0, 65537, 19, 0, 65537, 20, 0, 65537, 21, 0, 65537, 22, 0, 65538, 131070, 0, 65536, 131071, 0, 65541, 65536, 0, 131073, 65537, 0, 131073, 65538, 0, 131074, 65551, 0, 131072, 65552, 0, 131073, 65553, 0, 131073, 65554, 0, 131073, 65555, 0, 131073, 65556, 0, 65542, 65557, 0, 65537, 65558, 0, 65538, 196606, 0, 131072, 196607, 0, 65543, 131092, 0, 65536, 131093, 0, 65537, 131094, 0, 65538, 262143, 0, 65539, 196628, 0, 65536, 196629, 0, 65537, 196630, 0, 65538, 327679, 0, 65539, 262164, 0, 65536, 262165, 0, 65541, 262166, 0, 131074, 393215, 0, 65539, 327700, 0, 65536, 327701, 0, 65538, 458751, 0, 65539, 393236, 0, 65536, 393237, 0, 65538, 524287, 0, 131075, 458772, 0, 65536, 458773, 0, 65538, 524308, 0, 65536, 524309, 0, 65538, 589844, 0, 65536, 589845, 0, 65538, 720894, 0, 0, 720895, 0, 1, 655360, 0, 2, 655366, 0, 0, 655367, 0, 1, 655368, 0, 1, 655369, 0, 2, 655372, 0, 0, 655373, 0, 1, 655374, 0, 2, 655377, 0, 0, 655378, 0, 1, 655379, 0, 1, 655380, 0, 131078, 655381, 0, 65538, 786430, 0, 65536, 786431, 0, 65537, 720896, 0, 131077, 720897, 0, 1, 720898, 0, 1, 720899, 0, 1, 720900, 0, 1, 720901, 0, 1, 720902, 0, 131078, 720903, 0, 65537, 720904, 0, 65537, 720905, 0, 131077, 720906, 0, 1, 720907, 0, 1, 720908, 0, 131078, 720909, 0, 65537, 720910, 0, 131077, 720911, 0, 1, 720912, 0, 1, 720913, 0, 131078, 720914, 0, 65537, 720915, 0, 65537, 720916, 0, 65537, 720917, 0, 131077, 720918, 0, 2, 851966, 0, 131072, 851967, 0, 131073, 786432, 0, 131073, 786433, 0, 65542, 786434, 0, 65537, 786435, 0, 65537, 786436, 0, 65537, 786437, 0, 65537, 786438, 0, 65541, 786439, 0, 131073, 786440, 0, 131073, 786441, 0, 131073, 786442, 0, 131073, 786443, 0, 131073, 786444, 0, 131073, 786445, 0, 131073, 786446, 0, 65542, 786447, 0, 65537, 786448, 0, 65537, 786449, 0, 65537, 786450, 0, 65537, 786451, 0, 65537, 786452, 0, 65537, 786453, 0, 65541, 786454, 0, 131074, 851969, 0, 131072, 851970, 0, 131073, 851971, 0, 131073, 851972, 0, 131073, 851973, 0, 131073, 851974, 0, 131074, 851982, 0, 65536, 851983, 0, 65537, 851984, 0, 65537, 851985, 0, 65537, 851986, 0, 65537, 851987, 0, 65537, 851988, 0, 65541, 851989, 0, 131074, 917516, 0, 196608, 917517, 0, 196609, 917518, 0, 196614, 917519, 0, 131073, 917520, 0, 131073, 917521, 0, 131073, 917522, 0, 131073, 917523, 0, 131073, 917524, 0, 131074 )

[node name="SpikeCollection" type="Node2D" parent="." index="1"]

[node name="Spikes" parent="SpikeCollection" index="0" instance=ExtResource( 8 )]
position = Vector2( 8, 40 )
rotation = 1.5708

[node name="Spikes2" parent="SpikeCollection" index="1" instance=ExtResource( 8 )]
position = Vector2( 8, 55 )
rotation = 1.5708

[node name="Spikes3" parent="SpikeCollection" index="2" instance=ExtResource( 8 )]
position = Vector2( 8, 70 )
rotation = 1.5708

[node name="Spikes4" parent="SpikeCollection" index="3" instance=ExtResource( 8 )]
position = Vector2( 312, 40 )
rotation = -1.5708

[node name="Spikes5" parent="SpikeCollection" index="4" instance=ExtResource( 8 )]
position = Vector2( 312, 56 )
rotation = -1.5708

[node name="Spikes6" parent="SpikeCollection" index="5" instance=ExtResource( 8 )]
position = Vector2( 312, 72 )
rotation = -1.5708

[node name="Door" parent="." index="2" instance=ExtResource( 3 )]
position = Vector2( -8, 144 )
scale = Vector2( -1, 1 )
connection = ExtResource( 4 )
new_level_path = "res://src/World/Level01.tscn"

[node name="Trigger" parent="." index="3" instance=ExtResource( 6 )]
position = Vector2( 0, 144 )
collision_layer = 0

[node name="CollisionShape2D" parent="Trigger" index="0"]
position = Vector2( 16, 0 )
shape = SubResource( 1 )

[node name="BlockDoor" parent="." index="4" instance=ExtResource( 7 )]
visible = false
collision_layer = 0
collision_mask = 1
tile_data = PoolIntArray( 589823, 0, 3, 655359, 0, 131075 )

[node name="BossEnemy" parent="." index="5" instance=ExtResource( 2 )]
position = Vector2( 160, 96 )
[connection signal="area_triggered" from="Trigger" to="." method="_on_Trigger_area_triggered"]
[connection signal="body_entered" from="Trigger" to="Trigger" method="_on_Trigger_body_entered"]
[connection signal="died" from="BossEnemy" to="." method="_on_BossEnemy_died"]

[editable path="Trigger"]
